...
                    android:textAppearance="@style/TextHeavy.16sp"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tvGamePlatform"
                    tools:text="@string/bullet_ps3"
                    android:textAppearance="@style/TextBook.16sp"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

...
                android:textAppearance="@style/TextHeavy.16sp"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvGameOwner"
                tools:text="@string/loremText"
                android:lines="@integer/line_1"
                android:paddingRight="@dimen/margin_default"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@+id/tvGameOwnerTitle"
                app:layout_constraintStart_toStartOf="@id/tvGameOwnerTitle"
...
