...
    </string>
    <string name="load_library_error_not_know">Ocorreu um erro ao carregar a bilioteca de jogos.\nPor favor, tente
        novamente.
    </string>

    <string name="bullet_ps3">PS3</string>
    <string name="bullet_ps4">PS4</string>
    <string name="bullet_360">360</string>
    <string name="bullet_ONE">ONE</string>
    <string name="bullet_3DS">3DS</string>
    <string name="bullet_NS">NS</string>

    <string name="chip_ps3">PS3</string>
...

    <string name="my_reservation_owner_name">Dono: %1$s</string>

    <string name="loan_state_pending">Pendente</string>
    <string name="loan_state_active_plural">Faltam %1$d dias</string>
    <string name="loan_state_active_singular">Falta %1$d dia</string>
    <string name="loan_state_expired">Expirado</string>
    <string name="loan_state_expired_lower_case">expirado</string>

    <string name="loan_info_expired">Seu prazo de reserva acabou. Entregue o jogo ao dono para que outra pessoa consiga
        reservar :)
    </string>
    <string name="loan_info_pending">Aguardando o jogo ser entregue pelo dono para que sua reserva seja liberada.
...
