...

        <TextView
            android:textAppearance="@style/TextHeavy.16sp"
            android:layout_marginTop="@dimen/componentsMarginDefaultError"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:id="@+id/errorDescription"
            android:textColor="@color/textColor"
            android:gravity="center"
            tools:text="@string/no_game_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
...
        <br.com.concrete.tentacle.custom.ButtonView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorDescription"
            android:layout_marginTop="@dimen/componentsMarginDefaultError"
            android:focusable="true"
            android:id="@+id/buttonNameError"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            app:buttonName="@string/add_new_game"
...
